bin_PROGRAMS = timelapse-deflicker 
timelapse_deflicker_SOURCES = main.cpp
timelapse_deflicker_CPPFLAGS = -I/usr/include/GraphicsMagick/ 
#timelapse_deflicker_LIBS = -lGraphicsMagick++ -lstdc++ -lpthread
timelapse_deflicker_LDFLAGS = -L/usr/lib/
timelapse_deflicker_LDADD = -lGraphicsMagick++ -lstdc++ -lpthread
